<resources>
    <string name="app_name" translatable="false">Neighbour In Need!</string>
    <string name="register_username" translatable="false">Username</string>
    <string name="username_hint" translatable="false">Username</string>
    <string name="register_submit_button" translatable="false">Submit</string>
    <string name="mainpage_logo" translatable="false">Neighbour In Need!</string>
    <string name="mainpage_descr" translatable="false">Share, Care, Build communities! Find and offer help!</string>
    <string name="mainpage_button_login" translatable="false">Login</string>
    <string name="mainpage_button_register" translatable="false">Register</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="regsiter_email_hint" translatable="false">Email</string>
    <string name="regsiter_city_hint" translatable="false">City</string>
    <string name="register_postcode_hint" translatable="false">Postcode</string>
    <string name="description_bg_image" translatable="false">This is the background view of our application. It shows some houses in Tuebingen (Germany).</string>
    <string name="description_bg_dialog" translatable="false">This is the background view of the input dialogs. The user can type in all the information, which is needed to create a new account or login.</string>
    <string name="lable_main_category" translatable="false">Main Category</string>
    <string name="lable_subcategory" translatable="false">Subcategory</string>
    <string name="search_desc_city_hint" translatable="false">Search for your city or a description</string>
</resources>
