<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/description_bg_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tubingen_1280"
        tools:srcCompat="@drawable/tubingen_1280" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/aclonica"
        android:text="@string/register_submit_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.192" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="343dp"
        android:layout_height="188dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/description_bg_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corner" />

    <CheckBox
        android:id="@+id/checkbox_remember_me"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="185dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="#8B673AB7"
        android:fontFamily="@font/aclonica"
        android:text="Remember Me!"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <EditText
        android:id="@+id/inputLoginUsername"
        android:layout_width="323dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/register_username"
        android:background="@drawable/rounded_white"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/inputLoginPassword"
        android:layout_width="323dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/password_hint"
        android:background="@drawable/rounded_white"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#971B1B"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/inputLoginUsername" />

</androidx.constraintlayout.widget.ConstraintLayout>